Fix composer header hidden by mobile browser (#2279)

--- a/less/forum/Composer.less
+++ b/less/forum/Composer.less
@@ -114,7 +114,7 @@
     background: @body-bg;
 
     &:not(.minimized) {
-      position: absolute;
+      position: fixed;
       top: 0;
       height: 350px !important;
       padding-top: @header-height-phone;
